--- a/templates/kvmpi.systemd.j2
+++ b/templates/kvmpi.systemd.j2
@@ -1,5 +1,5 @@
 [Unit]
-Description=KVM Pi  - RPi virtual keyboard
+Description=KVM Pi - RPi-based virtual KVM
 After=syslog.target network.target
 
 [Service]
