--- a/templates/tinypilot.systemd.j2
+++ b/templates/tinypilot.systemd.j2
@@ -9,7 +9,7 @@ WorkingDirectory={{ tinypilot_dir }}
 ExecStart={{ tinypilot_dir }}/venv/bin/python app/main.py
 Environment=HOST={{ tinypilot_interface }}
 Environment=PORT={{ tinypilot_port }}
-Environment=HID_PATH={{ tinypilot_hid_path }}
+Environment=KEYBOARD_PATH={{ tinypilot_keyboard_interface }}
 Restart=on-abort
 
 [Install]
