--- a/templates/usb-gadget.systemd.j2
+++ b/templates/usb-gadget.systemd.j2
@@ -5,7 +5,7 @@ After=syslog.target
 [Service]
 Type=oneshot
 User=root
-ExecStart={{ tinypilot_initialize_hid_script_path }}
+ExecStart={{ tinypilot_dir }}/scripts/usb-gadget/init-usb-gadget
 
 [Install]
 WantedBy=local-fs.target
