--- a/templates/tinypilot.systemd.j2
+++ b/templates/tinypilot.systemd.j2
@@ -10,7 +10,7 @@ ExecStart={{ tinypilot_dir }}/venv/bin/python app/main.py
 Environment=HOST={{ tinypilot_interface }}
 Environment=PORT={{ tinypilot_port }}
 Environment=KEYBOARD_PATH={{ tinypilot_keyboard_interface }}
-Restart=on-abort
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
