--- a/templates/tinypilot.systemd.j2
+++ b/templates/tinypilot.systemd.j2
@@ -11,6 +11,9 @@ Environment=HOST={{ tinypilot_interface }}
 Environment=PORT={{ tinypilot_port }}
 Environment=KEYBOARD_PATH={{ tinypilot_keyboard_interface }}
 Environment=MOUSE_PATH={{ tinypilot_mouse_interface }}
+{% if tinypilot_keyboard_layout %}
+Environment=KEYBOARD_LAYOUT={{ tinypilot_keyboard_layout }}
+{% endif %}
 Restart=always
 
 [Install]
