--- a/templates/tinypilot.systemd.j2
+++ b/templates/tinypilot.systemd.j2
@@ -12,6 +12,9 @@ Environment=PORT={{ tinypilot_port }}
 Environment=KEYBOARD_PATH={{ tinypilot_keyboard_interface }}
 Environment=MOUSE_PATH={{ tinypilot_mouse_interface }}
 Environment=KEYBOARD_LAYOUT={{ tinypilot_keyboard_layout }}
+{% if tinypilot_enable_debug_logging %}
+Environment=DEBUG=1
+{% endif %}
 Restart=always
 
 [Install]
