--- a/templates/usb-gadget.systemd.j2
+++ b/templates/usb-gadget.systemd.j2
@@ -5,7 +5,7 @@ After=syslog.target
 [Service]
 Type=oneshot
 User=root
-ExecStart={{ final_init_usb_gadget_path }}
+ExecStart={{ tinypilot_privileged_dir }}/init-usb-gadget
 
 [Install]
 WantedBy=local-fs.target
