--- a/templates/usb-gadget.systemd.j2
+++ b/templates/usb-gadget.systemd.j2
@@ -6,6 +6,9 @@ After=syslog.target
 Type=oneshot
 User=root
 ExecStart={{ tinypilot_privileged_dir }}/init-usb-gadget
+RemainAfterExit=true
+ExecStop={{ tinypilot_privileged_dir }}/remove-usb-gadget
+StandardOutput=journal
 
 [Install]
 WantedBy=local-fs.target
