--- a/templates/tinypilot.systemd.j2
+++ b/templates/tinypilot.systemd.j2
@@ -1,6 +1,7 @@
 [Unit]
 Description=TinyPilot - RPi-based virtual KVM
 After=syslog.target network.target
+StartLimitIntervalSec=0
 
 [Service]
 Type=simple
