Add a timeout to update-service systemd config.

--- a/templates/tinypilot-updater.systemd.j2
+++ b/templates/tinypilot-updater.systemd.j2
@@ -11,6 +11,8 @@ Environment=PYTHONPATH={{ tinypilot_dir }}/app
 StandardOutput=syslog
 StandardError=syslog
 SyslogIdentifier=tinypilot-update-svc
+TimeoutSec=900
+KillSignal=SIGKILL
 
 [Install]
 WantedBy=local-fs.target
