Install Janus Gateway and uStreamer Janus plugin (#191)
* Install Janus.

* Upgrade uStreamer.

* Add uStreamer Janus plugin config.

* Add comment about experimental Janus installation.

* Add comment with link to known Janus issue.

* Pin Janus repo version.

* Add Janus nginx config.

* Conditionally enable WebRTC on the frontend.

* Reformat line to fit within 80 chars.

* Add comment about Janus variables.

--- a/templates/tinypilot-app-settings.cfg.j2
+++ b/templates/tinypilot-app-settings.cfg.j2
@@ -3,3 +3,7 @@
 
 KEYBOARD_PATH = '{{ tinypilot_keyboard_interface }}'
 MOUSE_PATH = '{{ tinypilot_mouse_interface }}'
+{% if (tinypilot_install_janus and ustreamer_compile_janus_plugin and
+           ustreamer_h264_sink != None) -%}
+USE_WEBRTC_REMOTE_SCREEN = True
+{% endif -%}
