--- a/templates/tinypilot-app-settings.cfg.j2
+++ b/templates/tinypilot-app-settings.cfg.j2
@@ -3,6 +3,6 @@
 
 KEYBOARD_PATH = '{{ tinypilot_keyboard_interface }}'
 MOUSE_PATH = '{{ tinypilot_mouse_interface }}'
-{% if (ustreamer_with_h264) -%}
+{% if (ustreamer_h264_sink != None) -%}
 USE_WEBRTC_REMOTE_SCREEN = True
 {% endif -%}
