--- a/templates/usb-gadget.systemd.j2
+++ b/templates/usb-gadget.systemd.j2
@@ -5,9 +5,9 @@ After=syslog.target
 [Service]
 Type=oneshot
 User=root
-ExecStart={{ tinypilot_privileged_dir }}/init-usb-gadget
+ExecStart={{ tinypilot_services_dir }}/init-usb-gadget
 RemainAfterExit=true
-ExecStop={{ tinypilot_privileged_dir }}/remove-usb-gadget
+ExecStop={{ tinypilot_services_dir }}/remove-usb-gadget
 StandardOutput=journal
 
 [Install]
